notes and problems in the book

--- a/PointersOnC/.obsidian/app.json
+++ b/PointersOnC/.obsidian/app.json
@@ -1,5 +1,7 @@
 {
   "newFileLocation": "folder",
   "newFileFolderPath": "Zettle",
-  "attachmentFolderPath": "./"
+  "attachmentFolderPath": "./",
+  "alwaysUpdateLinks": true,
+  "vimMode": true
 }
